deploy/template/k3s/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: ccr.ccs.tencentyun.com/itqm-private/redis:6-alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-cfg
              mountPath: /etc/redis/redis.conf
              subPath: redis.conf
            - name: redis-storage
              mountPath: /data/redis
          command: ["redis-server", "/etc/redis/redis.conf"]
      volumes:
        - name: redis-cfg
          configMap:
            name: redis-cmp
        - name: redis-storage
          hostPath:
            path: ${REDIS_DATA_DIR}
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    app: redis
spec:
  ports:
    - port: 6379
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc-node-port
  labels:
    app: redis
spec:
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 31179
  selector:
    app: redis
